[project]
name = "subsequential_matcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Huynh",email = "hdmquan@outlook.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "polars (>=1.38.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
